--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Overlay - Modal - Toast</h1>
+            <h1>Overlay</h1>
             <div id="app"></div>
         </div>
         <script type="module" src="/src/main.ts"></script>
